# django-logic-demo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yml  makefile  manage.py  pyproject.toml  settings.py
abstract/: conditions.py  models.py  tests.py
abstract/docs/: django-logic.drawio
abstract/logic/: process.py  side_effects.py
abstract/management/commands/: test_abstract.py
abstract/migrations/: 0001_initial.py
clickhouse/: client.py  logging.py
clickhouse/migrations/: 0001_initial.py
demo/: celery_app.py  settings.py  transition.py
invoice/: test_process.py  test_state.py  test_transition.py
invoice/migrations/: 0001_initial.py
locker/: __init__.py  apps.py  models.py  process.py  serializers.py  urls.py  viewsets.py
locker/logic/: process.py
locker/management/commands/: test_locker.py
locker/migrations/: 0001_initial.py
locker/tests/: test_api.py  test_process.py
